# SIMDTEST

./: CMakeLists.txt
include/: simdutils.h  test.h
src/: main.cc
